# wasm-dj-controller

./: .copilot-instructions.md  CONTROLLER_PAGE_IMPLEMENTATION.md  DOCUMENTATION_INVENTORY.md  PERFORMANCE_UPGRADE.md  QUICKSTART_PERFORMANCE.md  README.md  SETUP_SUMMARY.md  build-wasm.ps1
.github/workflows/: azure-static-web-apps.yml
docs/: 01-GETTING-STARTED.md  02-ARCHITECTURE.md  03-AUDIO-ENGINE.md  04-WEB-AUDIO-INTEGRATION.md  AZURE_DEPLOYMENT.md  BPM_DETECTION_MULTIBAND.md  README.md
docs/PERFORMANCE/: 01-REQUIREMENTS.md  02-AUDIO-OPTIMIZATION.md
infrastructure/: resources.bicep
src/audio-engine/: .gitignore  BUILDING.md  COMPLETION_REPORT.md  Cargo.toml  DELIVERY.md  INDEX.md  NAVIGATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.rs  examples_and_usage.rs
src/audio-engine/src/: audio_analysis.rs  buffer_manager.rs  equalizer.rs  fader.rs  lib.rs  phase_vocoder.rs  pitch_shifter.rs
src/dj-controller/: README.md  angular.json  package-lock.json  package.json
src/dj-controller/public/assets/: audio-worklet-processor.js
src/dj-controller/public/wasm/: audio_engine.wasm
src/dj-controller/src/: index.html  styles.scss
src/dj-controller/src/app/: app.config.ts  app.routes.ts  app.ts
src/dj-controller/src/app/components/beat-counter/: beat-counter.component.html  beat-counter.component.scss  (+1 more)
src/dj-controller/src/app/services/: audio-analysis.service.ts  audio-engine.service.ts  audio-playback.service.ts  shared-audio-context.service.ts  wasm-loader.service.ts
src/dj-controller/src/styles/: _primeng-theme.scss  _variables.scss
(+16 files in other folders)
