[package]
name = "audio-engine"
version = "1.0.0"
edition = "2021"
description = "High-performance WebAssembly audio processing engine for DJ controller"
license = "MIT"
authors = ["nikneem"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
rustfft = "6"
num-complex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 2

[build-dependencies]
